force-app/main/default/objects/Custom_Object_History__c/Custom_Object_History__c.object-meta.xml
<CustomObject>
    <label>Custom Object History</label>
    <nameField>
        <label>Custom Object History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Object History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>