force-app/main/default/objects/Custom_Object_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RELATED ACCOUNT, IF EXISTING</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Object History</relationshipLabel>
    <relationshipName>Custom_Object_History</relationshipName>
    <type>Lookup</type>
</CustomField>