force-app/main/default/objects/Custom_Object_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>32</length>
    <type>Text</type>
</CustomField>