force-app/main/default/objects/Custom_Object_History__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <label>Previous Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>